--- a/package.json
+++ b/package.json
@@ -15,11 +15,13 @@
         "watch": "webpack --watch",
         "serve": "webpack serve",
         "compile-aqua": "aqua -i ./aqua/ -o ./src/_aqua",
-        "watch-aqua": "chokidar \"**/*.aqua\" -c \"npm run compile-aqua\""
+        "watch-aqua": "chokidar \"**/*.aqua\" -c \"npm run compile-aqua\"",
+        "pages": "npm run build && cp -r ./dist/* ./docs && cp -r ./public/* ./docs"
     },
     "author": "",
     "license": "ISC",
     "dependencies": {
+        "@fluencelabs/avm-runner-background": "^0.2.0",
         "@fluencelabs/fluence": "^0.20.1",
         "@fluencelabs/fluence-network-environment": "^1.0.13",
         "process": "^0.11.10",
